Fix table text alignment

--- a/UFL-Workflow/trunk/root/static/main.css
+++ b/UFL-Workflow/trunk/root/static/main.css
@@ -159,6 +159,7 @@ width:100%;
 
 #content td {
 padding:5px;
+text-align:left;
 }
 
 #content textarea {
